<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="48dp"
        android:enabled="false"
        android:text="@string/txt_butao_salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSalvar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:text="@string/txt_button_enviar"
        app:layout_constraintEnd_toStartOf="@+id/buttonEnviar"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSobreNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextSobreNome"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextCurso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/editTextCurso"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/txt_hint_edit_curso"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTelefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:hint="@string/txt_hind_edit_telefone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="15"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="50dp"
        android:text="@string/txt_button_limpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/buttonEnviar"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/editTextNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_svg" />

</androidx.constraintlayout.widget.ConstraintLayout>